@@ -1,45 +1,35 @@
 EXULT lets you browse around the Ultima7 universe in a window under Linux,
 and possibly other Unix systems.  It is released under the GNU General Public
-License, and contains source code.  This is my first attempt at graphical
-X programming, so please excuse any roughness in my code.
+License, and contains source code.
+
+IMPORTANT:  Run "exult" in a clean installation of Ultima7; "exult" should be
+installed in a directory where you see the "static" subdirectory.  "Exult" will
+create the "gamedat" directory and files the first time you run it.  And al-
+though I've tried to be safe about this, I don't recommend trying it on a
+game which you're actually in the middle of playing.
+
+Version 0.10 has a "usecode" interpreter.  The "usecode" file is a compiled
+script that drives the plot and conversations of the game.  My interpreter is
+missing many of the builtin functions which are not yet known, so things do
+not work perfectly.  Still, you can double-click on most of the characters
+you see, and you'll be able to have conversations with them.  You can also
+walk around using the right mouse button, or use the cursor keys to more
+quickly browse around Britannia.
 
 Version 0.09 is the first WIN32 release, done entirely by W.J. Palenstijn.
 Please see his "readme.w95" file.
 
-Version 0.08's major new feature is a builtin script compiler for the 
-conversation engine.  There are a couple script examples, "test1.scr" and
-"test2.scr".  To run, for example, the second example, enter:
-		exult test2.scr
-The script language uses absolute locations in the game, which can be
-obtained by clicking the middle mouse button while holding the SHIFT key
-down.
-
-In addition, 0.08 has greatly improved object identification, thanks to
+Version 0.08 has greatly improved object identification, thanks to
 contributor Tristan Tarrant.
-
-Version 0.07 has my first, rough attempt at creating a conversation engine
-based on muliple finite-state-machines.  You can double-click on Iolo or the
-female Avatar and have a brief conversation.  My goal is to provide a script-
-ing capability for conversations, and the engine is being designed with that
-as a goal.  The interface to conversations is currently only implemented for
-Linux.
-
-Version 0.06's main enhancements involve portability to MSDOS.  The startup
-memory requirements are also greatly reduced.
-
-Version 0.05 is even closer to being a game engine.  It not only
-allows you to walk the avatar around using the right mouse button, but also
-has two NPC's wandering around randomly; plus, it now has text-rendering
-capabilities.
 
 Although I'm designing Exult under X, I want it to be as portable as possible
 to other platforms and graphics systems (like SVGALIB and GGI).  This is why
 I've gone to the trouble of doing the text rendering using FreeType, since it's
 already highly portable and completely graphics-system independent.
 
-This program is based on the work of Gary Thompson in uncovering the format
-of the Ultima 7 data files.  My eventual goal is to make it possible to create
-Ultima7-type games under Linux.
+This program is based on the work of Gary Thompson, Maxim Shatskih,
+Jakob Shonberg, and Wouter Dijkslag in uncovering the format of the Ultima 7 
+data files.
 
 Requirements:	Ultima7 must be installed and visible.  The "exult" executable
 		should be placed in the top-level u7 directory (where "static"
@@ -57,13 +47,7 @@ Installation:	On a RedHat Linux system, just type
 		the "FreeType" library installed on your system when you build
 		"Exult".
 
-		Exult will attempt to show the moveable objects in the
-		"u7ireg" files if they exist.  You will have had to play the
-		actual Ultima 7 game (under DOS) at least once for these
-		files to exist, as the installation program doesn't create
-		them.
-
-		A binary built on a RedHat 5.0 x86 system is included, static-
+		A binary built on a SuSE 6.1 x86 system is included, static-
 		ally linked as much as possible.
 
 Caveats:	The program is a memory hog.  Really makes me appreciate
@@ -82,6 +66,7 @@ Caveats:	The program is a memory hog.  Really makes me appreciate
 
 Running:	Hold right mouse button down to move Avatar.
 		Click on objects with left button to identify them.
+		Double-click on characters to hold conversations.
 		Double-click on doors, shutters with left button to open or
 			close them.
 		Arrow keys scroll around the "universe".
@@ -93,15 +78,18 @@ Running:	Hold right mouse button down to move Avatar.
 		'-' darkens the palette.
 
 Credits:	The paper by Gary Thompson on the structure of the U7 data
-		files was crucial to the development of Exult.
+		files was crucial to the early development of Exult.
 
+		Work by Maxim Shatskih, Jakob Shonberg, and Wouter Dijkslag 
+		made the "usecode" interpreter possible.
+		
 		Font rendering is done using the FreeType font engine.
 
 		Thanks also go to the person who wrote u7items.txt and the
 		contributor of the "avatar.ttf" font.
 
 I can be reached for complaints/complements/code-modifications at
-jsf@hevanet.com.
+jeff@simutech.com.
 
 -- Jeff Freedman
 
